アプリ一覧に応募を追加

--- a/data/apps.json
+++ b/data/apps.json
@@ -3,5 +3,10 @@
     "title": "N/S Checker",
     "link": "/checker",
     "image": "checker"
+  },
+  {
+    "title": "Nullerへ応募する",
+    "link": "/entry",
+    "image": "entry"
   }
 ]
