--- a/deno.json
+++ b/deno.json
@@ -1,4 +1,5 @@
 {
+  "tasks": { "dev": "deno run -A --watch=static/,routes/ dev.ts" },
   "lock": false,
   "importMap": "./import_map.json",
   "compilerOptions": {
