アプリ一覧

--- a/data/apps.json
+++ b/data/apps.json
@@ -29,6 +29,12 @@
     "image": "campus-alert",
     "njr": false
   },
+   {
+    "title": "N/S Verify",
+    "link": "/verify",
+    "image": "verify",
+    "njr": false
+  },
   {
     "title": "Nullerへ応募する",
     "link": "/entry",
