--- a/deno.json
+++ b/deno.json
@@ -1,20 +1,24 @@
 {
   "tasks": {
     "start": "deno run -A --unstable --watch=static/,routes/ dev.ts",
-    "db:reset": "deno run --allow-read --allow-env --unstable tools/reset_kv.ts"
+    "db:reset": "deno run --allow-read --allow-env --unstable tools/reset_kv.ts",
+    "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
+    "build": "deno run -A dev.ts build",
+    "preview": "deno run -A main.ts",
+    "update": "deno run -A -r https://fresh.deno.dev/update ."
   },
   "lock": false,
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "preact"
   },
-  "imports":{
+  "imports": {
     "@/": "./",
-    "$fresh/": "https://deno.land/x/fresh@1.2.0/",
+    "$fresh/": "https://deno.land/x/fresh@1.4.2/",
     "$gfm": "https://deno.land/x/gfm@0.2.3/mod.ts",
     "preact": "https://esm.sh/preact@10.15.1",
     "preact/": "https://esm.sh/preact@10.15.1/",
-    "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.1.0",
+    "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.1",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.1.3",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.2.3",
     "twind": "https://esm.sh/@twind/core@1.1.3",
@@ -27,6 +31,23 @@
     "fresh_charts/": "https://deno.land/x/fresh_charts@0.2.1/",
     "kv_oauth": "https://deno.land/x/deno_kv_oauth@v0.2.8/mod.ts",
     "@twind/core": "https://esm.sh/@twind/core@1.1.3",
-    "ptera": "https://deno.land/x/ptera@v1.0.2/mod.ts"
+    "ptera": "https://deno.land/x/ptera@v1.0.2/mod.ts",
+    "twind/": "https://esm.sh/twind@0.16.19/"
+  },
+  "lint": {
+    "rules": {
+      "tags": [
+        "fresh",
+        "recommended"
+      ]
+    },
+    "exclude": [
+      "_fresh"
+    ]
+  },
+  "fmt": {
+    "exclude": [
+      "_fresh"
+    ]
   }
 }
