--- a/.github/workflows/mono0218-az-actions_ns-apps.yml
+++ b/.github/workflows/mono0218-az-actions_ns-apps.yml
@@ -6,7 +6,7 @@ name: Build and deploy container app to Azure Web App - ns-apps
 on:
   push:
     branches:
-      - mono0218/az-actions
+      - master
   workflow_dispatch:
 
 jobs:
